# ResearchHelper

./: CMakeLists.txt  README.md
frontend/: about.html  index.html
frontend/css/: main.css
frontend/js/: main.js
include/backend/: content_formatting.h  web_crawler.h  web_crawler_config.h  web_crawler_priv.h  web_utils.h  webpage_parsing.h
include/server/: handlers.h  http.h  http_errors.h  http_orchestrator.h  http_orchestrator_priv.h  router.h  server.h
include/utils/: json.h  utils.h
src/: main.c
src/backend/: content_formatting.c  web_crawler.c  web_crawler_config.c  web_utils.c  webpage_parsing.c
src/server/: handlers.c  http.c  http_errors.c  http_orchestrator.c  router.c  server.c
src/utils/: json.c  utils.c
tests/data/: get_content_item_dummy_curl_response_comments.txt  get_content_item_dummy_curl_response_post.txt  get_content_item_expected_response.txt  get_content_list_expected_response.txt  google_query_dummy_curl_response.txt  reddit_dummy_response.txt  reddit_dummy_response_5_items.txt  reddit_dummy_response_score_descending.txt  stackoverflow_dummy_post.txt  stackoverflow_dummy_response.txt  stackoverflow_dummy_response_5_items.txt  stackoverflow_dummy_response_score_descending.txt  test_env.env
tests/integration/: integration_test_handlers.c  test_advanced_server_response.c  test_basic_server_response.c  test_file_serving.c  test_web_crawling_pipeline.c
tests/testutils/include/: test_http_utils.h  test_server_utils.h  test_utils.h  test_webpage_parsing_utils.h
tests/testutils/src/: test_http_utils.c  test_server_utils.c  test_utils.c  test_webpage_parsing_utils.c
tests/unit/: test_content_formatting.c  test_http.c  test_http_orchestrator.c  test_json.c  test_router.c  test_utils.c  test_web_crawler.c  test_web_crawler_config.c  test_web_utils.c  test_webpage_parsing.c
